hermes/tests/fixtures/const_generics/expected.stderr
  × type expected, got
  │   (fun x => True : ?m.1 → Prop)
   ╭─[[PROJECT_ROOT]/src/lib.rs:8:7]
 7 │ /// isSafe :
 8 │ ///   fun _ => True
   ·       ──────┬──────
   ·             ╰── here
 9 │ /// ```
   ╰────

Error: Lean verification failed
